--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "mysql2": "^3.16.3",
+    "nodemailer": "^6.10.1",
     "react-router-dom": "^7.13.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
