--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "google-auth-library": "^9.15.1",
     "multer": "^2.0.2",
     "mysql2": "^3.16.3",
     "nodemailer": "^6.10.1",
